// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render closed with items 1`] = `
<div
  className="root"
>
  <div
    className="header"
  >
    <div
      className="nameContainer"
    >
      <h2
        className="name"
      >
        Favorites List
      </h2>
      <span
        className="visibility"
      >
        Public
      </span>
    </div>
    <div
      className="buttonsContainer"
    >
      <button
        onClick={[MockFunction handleActionMenuClick]}
        type="button"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </span>
      </button>
      <button
        onClick={[MockFunction handleContentToggle]}
        type="button"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="content_hidden"
  >
    <WishlistItems
      items={
        Array [
          "item1",
          "item2",
        ]
      }
    />
  </div>
</div>
`;

exports[`render open with no items 1`] = `
<div
  className="root"
>
  <div
    className="header"
  >
    <div
      className="nameContainer"
    >
      <h2
        className="name"
      >
        Favorites List
      </h2>
      <span
        className="visibility"
      >
        Private
      </span>
    </div>
    <div
      className="buttonsContainer"
    >
      <button
        onClick={[MockFunction handleActionMenuClick]}
        type="button"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </span>
      </button>
      <button
        onClick={[MockFunction handleContentToggle]}
        type="button"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="18 15 12 9 6 15"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="content"
  >
    <p>
      <mock-FormattedMessage
        defaultMessage="There are currently no items in this list"
        id="wishlist.emptyListText"
      />
    </p>
  </div>
</div>
`;
